<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>automenta</groupId>
  <artifactId>narchy</artifactId>
  <version>1.0</version>
  <packaging>pom</packaging>
  <name>narchy</name>

  <prerequisites>
    <maven>3.6.2</maven>
  </prerequisites>
  <modules>
    <module>util</module>
    <module>ui</module>
    <module>logic</module>
    <module>nal</module>
    <module>nar</module>
    <module>lab</module>
    <module>app</module>
    <module>os</module>
    <module>test</module>
  </modules>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
<!--  <repositories>-->
<!--    <repository>-->
<!--      <id>jcenter</id>-->
<!--      <url>http://jcenter.bintray.com</url>-->
<!--    </repository>-->
<!--    <repository>-->
<!--      <id>jenkins-ci</id>-->
<!--      <url>http://repo.jenkins-ci.org/releases</url>-->
<!--    </repository>-->
<!--  </repositories>-->
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M3</version>
        <configuration>
          <testFailureIgnore>true</testFailureIgnore>
          <!--<systemPropertyVariables>
            <gzoltar-agent.destfile>${project.build.directory}/gzoltar.ser</gzoltar-agent.destfile>
          </systemPropertyVariables> -->
-          <skipTests>true</skipTests>
          <argLine>--illegal-access=permit</argLine>
          <forkCount>1C</forkCount>
         <!-- <properties>
          <property>
            <name>listener</name>
            <value>com.gzoltar.internal.core.listeners.JUnitListener</value>
          </property>
              </properties>-->
        </configuration>

      </plugin>
<!--      &lt;!&ndash;      https://github.com/GZoltar/gzoltar/tree/master/com.gzoltar.maven&ndash;&gt;-->
<!--      <plugin>-->
<!--        <groupId>com.gzoltar</groupId>-->
<!--        <artifactId>com.gzoltar.maven</artifactId>-->
<!--        <version>1.7.2</version>-->
<!--        <executions>-->
<!--          <execution>-->
<!--            <id>pre-unit-test</id>-->
<!--            <goals>-->
<!--              <goal>prepare-agent</goal>-->
<!--            </goals>-->
<!--          </execution>-->
<!--          <execution>-->
<!--            <id>post-unit-test</id>-->
<!--            <phase>test</phase>-->
<!--            <goals>-->
<!--              <goal>fl-report</goal>-->
<!--            </goals>-->
<!--          </execution>-->
<!--        </executions>-->
<!--      </plugin>-->


    <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.1.1</version>
        <executions>
          <execution>
            <phase>install</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <!-- <minimizeJar>true</minimizeJar> -->
              <filters>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <include>META-INF/BenchmarkList</include>
                    <exclude>META-INF/*.SF</exclude>
                    <exclude>META-INF/*.DSA</exclude>
                    <exclude>META-INF/*.RSA</exclude>
                  </excludes>
                </filter>
              </filters>
              <!--<transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>com.stackoverflow.nullpointer.expression.SwitchExpressions</mainClass>
                </transformer>
              </transformers>-->
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>13</release>
          <target>13</target>
          <useIncrementalCompilation>true</useIncrementalCompilation>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
